# XSFML

./: BaseResourceManager.h  BaseResourceManager.tpp  CMakeLists.txt  Util.cpp  Util.h  foo.cpp
include/XSFML/: BaseResourceManager.h  BaseResourceManager.tpp  Exception.h  SimpleInputManager.h  SoundManager.h  TextureAtlas.h  TextureManager.h  TextureRegion.h  Util.h
src/: SimpleInputManager.cpp  SoundManager.cpp  TextureAtlas.cpp  TextureManager.cpp  Util.cpp
test/: foo.cpp  test_open_file.cpp  test_texture_manager.cpp
test/data/: abc.txt
test/input_manager/: config-simple.txt  test_simple_input_manager.cpp
test/sound_manager/: config.txt  test_sound_manager.cpp
test/texture_manager/: config-bad.txt  config.txt  test.atlas  test1.atlas  test_texture_manager.cpp
test/util/: test_extract_resource_name.cpp  test_open_file.cpp
